<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintWidth_percent="1"
    app:layout_constraintHeight_percent="1"
    android:background="@color/wizard_background"
    tools:context=".MainActivity">

    <TextView
        style="@style/DarkTheme"
        android:id="@+id/appTitle"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginStart="24dp"
        android:text="@string/app_name"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/wizard_book"
        android:focusable="true"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appTitle"
        app:srcCompat="@drawable/wizard_main" />

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.62"
        app:layout_constraintWidth_percent="1">

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:onClick="onClick"
            android:paddingStart="35dp"
            android:paddingEnd="0dp"
            android:text="@string/val1"
            style="@style/TableButton"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button2" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:onClick="onClick"
            android:paddingStart="35dp"
            android:paddingEnd="0dp"
            android:text="@string/val2"
            style="@style/TableButton"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button1"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="32dp"
            android:onClick="onClick"
            android:paddingStart="35dp"
            android:paddingEnd="0dp"
            android:text="@string/val3"
            style="@style/TableButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:onClick="onClick"
            android:paddingStart="35dp"
            android:paddingEnd="0dp"
            android:text="@string/val4"
            style="@style/TableButton"
            app:layout_constraintEnd_toStartOf="@+id/button5"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button1" />

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:onClick="onClick"
            android:paddingStart="35dp"
            android:paddingEnd="0dp"
            android:text="@string/val5"
            style="@style/TableButton"
            app:layout_constraintEnd_toStartOf="@+id/button6"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button4"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:onClick="onClick"
            android:paddingStart="35dp"
            android:paddingEnd="0dp"
            android:text="@string/val6"
            style="@style/TableButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button5"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:onClick="onClick"
            android:paddingStart="35dp"
            android:paddingEnd="0dp"
            android:text="@string/val7"
            style="@style/TableButton"
            app:layout_constraintEnd_toStartOf="@+id/button8"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:onClick="onClick"
            android:paddingStart="35dp"
            android:paddingEnd="0dp"
            android:text="@string/val8"
            style="@style/TableButton"
            app:layout_constraintEnd_toStartOf="@+id/button9"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button7"
            app:layout_constraintTop_toBottomOf="@+id/button5" />

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:onClick="onClick"
            android:paddingStart="35dp"
            android:paddingEnd="0dp"
            android:text="@string/val9"
            style="@style/TableButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button8"
            app:layout_constraintTop_toBottomOf="@+id/button6" />

        <ImageButton
            android:id="@+id/buttonOperation"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button"
            android:contentDescription="@string/image"
            android:onClick="onClick"
            android:src="@drawable/sign_plus"
            android:textAlignment="center"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintStart_toStartOf="@+id/button7"
            app:layout_constraintTop_toTopOf="@+id/buttonStart" />

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button"
            android:onClick="onClick"
            android:text="@string/start"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintWidth_percent="0.4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
