<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wizard_background"
    tools:context=".TestActivity">

    <ImageView
        android:id="@+id/castle"
        style="@style/KeyboardButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/castle" />

    <TextView
        android:id="@+id/testQuestion"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:textAlignment="center"
        android:textSize="92sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/wizardImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/wizardImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/wizard_splash"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.30"
        app:layout_constraintDimensionRatio="1:0.81"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/wizard_eyes_front" />

    <ImageView
        android:id="@+id/starsImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/image"
        app:layout_constraintWidth_percent="0.18"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="@+id/wizardImage"
        app:layout_constraintTop_toTopOf="@+id/wizardImage"
        app:srcCompat="@drawable/stars3" />

    <TextView
        android:id="@+id/testAnswer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="cursive"
        android:maxLength="3"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/wizardImage"
        app:layout_constraintEnd_toEndOf="@+id/wizardImage"
        app:layout_constraintWidth_percent="0.26"
        app:layout_constraintHeight_percent="0.14"
        tools:ignore="LabelFor"
        tools:text="@string/val8" />

    <TextView
        android:id="@+id/scoreLabel"
        android:layout_width="57dp"
        android:layout_height="22dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="52dp"
        android:fontFamily="cursive"
        android:text=""
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/scoreWandImage"
        android:layout_width="109dp"
        android:layout_height="36dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:alpha=".3"
        android:contentDescription="@string/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/score_wand" />

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.50"
        app:layout_constraintWidth_percent="1">

        <Button
            android:id="@+id/button1"

            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="onClick"
            android:tag="@string/val1"
            android:text="@string/val1"
            style="@style/KeyboardButton"
            app:layout_constraintBottom_toTopOf="@+id/button4"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="onClick"
            android:tag="@string/val2"
            android:text="@string/val2"
            style="@style/KeyboardButton"
            app:layout_constraintBottom_toTopOf="@+id/button5"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button1"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="onClick"
            android:tag="@string/val3"
            android:text="@string/val3"
            style="@style/KeyboardButton"
            app:layout_constraintBottom_toTopOf="@+id/button6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_keyboard"
            android:onClick="onClick"
            android:tag="@string/val4"
            android:text="@string/val4"
            style="@style/KeyboardButton"
            app:layout_constraintBottom_toTopOf="@+id/button7"
            app:layout_constraintEnd_toStartOf="@+id/button5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button1" />

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_keyboard"
            android:onClick="onClick"
            android:tag="@string/val5"
            android:text="@string/val5"
            style="@style/KeyboardButton"
            app:layout_constraintBottom_toTopOf="@+id/button8"
            app:layout_constraintEnd_toStartOf="@+id/button6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button4"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_keyboard"
            android:onClick="onClick"
            android:tag="@string/val6"
            android:text="@string/val6"
            style="@style/KeyboardButton"
            app:layout_constraintBottom_toTopOf="@+id/button9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button5"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_keyboard"
            android:onClick="onClick"
            android:tag="@string/val7"
            android:text="@string/val7"
            style="@style/KeyboardButton"
            app:layout_constraintBottom_toTopOf="@+id/buttonDummy"
            app:layout_constraintEnd_toStartOf="@+id/button8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_keyboard"
            android:onClick="onClick"
            android:tag="@string/val8"
            android:text="@string/val8"
            style="@style/KeyboardButton"
            app:layout_constraintBottom_toTopOf="@+id/button0"
            app:layout_constraintEnd_toStartOf="@+id/button9"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button7"
            app:layout_constraintTop_toBottomOf="@+id/button5" />

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_keyboard"
            android:onClick="onClick"
            android:tag="@string/val9"
            android:text="@string/val9"
            style="@style/KeyboardButton"
            app:layout_constraintBottom_toTopOf="@+id/buttonBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button8"
            app:layout_constraintTop_toBottomOf="@+id/button6" />

        <ImageButton
            android:id="@+id/buttonDummy"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_keyboard"
            android:contentDescription="@string/valExit"
            android:onClick="onClick"
            android:src="@drawable/exit"
            android:tag="@string/valExit"
            android:text=""
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button0"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button7" />

        <Button
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_keyboard"
            android:onClick="onClick"
            android:tag="@string/val0"
            android:text="@string/val0"
            style="@style/KeyboardButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonBack"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonDummy"
            app:layout_constraintTop_toBottomOf="@+id/button8" />

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_keyboard"
            android:contentDescription="@string/valBack"
            android:fontFamily="cursive"
            android:onClick="onClick"
            android:src="@drawable/backspace"
            android:tag="@string/valBack"
            android:text="@string/valBack"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button0"
            app:layout_constraintTop_toBottomOf="@+id/button9" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>